# transformer

./: .pre-commit-config.yaml  .prettierignore  .pylintrc  README.md  environment.yaml  pyproject.toml  requirements.txt
transformer/: README.md  __init__.py  attention.py  decoder.py  decoder_mask.py  embedding.py  encoder.py  feedforward_net.py  inference.py  layer_norm.py  positional_encoding.py  sublayer_connection.py  transformer.py  transformer_architecture.py  utils.py
